<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#600206"
    tools:context=".Test">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTituloTest"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:text="Test"
                android:textAlignment="center"
                android:textColor="#FF5722"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/iCalculadora"
                android:layout_width="match_parent"
                android:layout_height="326dp"
                app:srcCompat="@drawable/testimagen" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="808dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvPreguntaPrimera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvPreguntaPrimera"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/cb1y1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tobillo"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp" />

                        <CheckBox
                            android:id="@+id/cb1y2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/rodilla"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/cb2y1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/brazo"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp" />

                        <CheckBox
                            android:id="@+id/cb2y2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/higado"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tvPreguntaSegunda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvPreguntaSegunda"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/cb3y1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/paloLargo"
                            android:textAlignment="center"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp" />

                        <CheckBox
                            android:id="@+id/cb3y2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/baston"
                            android:textAlignment="center"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/cb4y1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/muleta"
                            android:textAlignment="center"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp" />

                        <CheckBox
                            android:id="@+id/cb4y2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/cubata"
                            android:textAlignment="center"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tvPreguntaTercera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvPreguntaTercera"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="131dp"
                    android:gravity="center">

                    <RadioButton
                        android:id="@+id/rb5y1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="  3     "
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rb5y2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/opcionTres"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rb6y1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bocata"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rb6y2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/opcion3"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                </RadioGroup>

                <Button
                    android:id="@+id/btLimpiarUno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="140dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="140dp"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="#FF9800"
                    android:onClick="limpiarCamposUno"
                    android:text="@string/btLimpiar" />

                <TextView
                    android:id="@+id/tvPreguntaCuarta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvPreguntaCuarta"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="171dp"
                    android:gravity="center">

                    <RadioButton
                        android:id="@+id/rb7y1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="7"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rb7y2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="0"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rb8y1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="11 "
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rb8y2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="0,3"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                </RadioGroup>

                <Button
                    android:id="@+id/btLimpiarDos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="140dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="140dp"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="#FF9800"
                    android:onClick="limpiarCamposDos"
                    android:text="@string/btLimpiar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="87dp"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvPreguntaSpinerUno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvPreguntaSpinerUno"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spPreguntaSpinerUno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#FFFFFF"
                        android:entries="@array/estaciones"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/tvPreguntaSpinerDos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvPreguntaSpinerDos"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spPreguntaSpinerDos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#FFFFFF"
                        android:entries="@array/nivelIngles"
                        android:gravity="center"
                        android:textAlignment="center" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/comprobar"
                android:layout_width="132dp"
                android:layout_height="50dp"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="140dp"
                android:layout_weight="1"
                android:backgroundTint="#FAE31B"
                android:onClick="comprobarDatos"
                android:text="@string/comprobar"
                android:textColor="#000000"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvResultadoTest"
                        android:layout_width="201dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tvTextoResultado"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvResultadoMostrado"
                        android:layout_width="206dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/bReseteoTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:onClick="resetearTest"
                android:text="@string/bReseteoTest" />

            <Button
                android:id="@+id/btVolverDeTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="140dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="#9C27B0"
                android:onClick="cerrarTest"
                android:text="@string/bVolver" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>