<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#600206"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvBienvenido"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/tvBienvenido"
                android:textAlignment="center"
                android:textColor="#0626DC"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="174dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="191dp"
                    app:srcCompat="@drawable/foto"
                    tools:layout_editor_absoluteY="-4dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="394dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:textAlignment="center">

                <Button
                    android:id="@+id/bCalculadora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#BA0606"
                    android:onClick="abrirCalculadora"
                    android:text="@string/bCalculadora"
                    android:textAlignment="center"
                    android:textColor="#2EE106"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bParImpar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#BA0606"
                    android:onClick="abrirParImpar"
                    android:text="@string/bParImpar"
                    android:textAlignment="center"
                    android:textColor="#2EE106"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bNumeroPrimo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#BA0606"
                    android:onClick="abrirNumeroPrimo"
                    android:text="@string/bNumeroPrimo"
                    android:textAlignment="center"
                    android:textColor="#2EE106"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bNumeroAleatorio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#BA0606"
                    android:onClick="abrirAleatorio"
                    android:text="@string/bNumeroAleatorio"
                    android:textAlignment="center"
                    android:textColor="#2EE106"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bTest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#BA0606"
                    android:onClick="abrirTest"
                    android:text="@string/bTest"
                    android:textAlignment="center"
                    android:textColor="#2EE106"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bVarios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#BA0606"
                    android:onClick="abrirVarios"
                    android:text="@string/bVarios"
                    android:textAlignment="center"
                    android:textColor="#2EE106"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etPalabra"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:ems="10"
                    android:hint="Pon tu nombre aqui"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#989494" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvOpcion"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:text="@string/tvOpcion"
                android:textAlignment="center"
                android:textColor="#DFC904"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:textAlignment="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bAcercaDe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:layout_weight="0"
                        android:backgroundTint="#F1DE37"
                        android:onClick="abrirAcercaDe"
                        android:text="@string/bAcercaDe"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/bSalirMainMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0"
                        android:backgroundTint="#1794F8"
                        android:onClick="cerrar"
                        android:text="@string/bSalirMainMenu"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainerView"
                android:name="com.example.calculadoraprueba.FragmentoPublicidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout="@layout/fragment_fragmento_publicidad"
                tools:layout_editor_absoluteY="731dp" />

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>