<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#600206"
    tools:context=".AcercaDe">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTituloAcercaDe"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="100dp"
                android:text="@string/tvTituloAcercaDe"
                android:textAlignment="center"
                android:textColor="#9952AB"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/iCalculadora"
                android:layout_width="match_parent"
                android:layout_height="326dp"
                app:srcCompat="@drawable/learn" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSaludoAcercaDe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tvSaludoAcercaDe"
                    android:textAlignment="center"
                    android:textColor="#FAF8F8"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tvTextoNombreUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#FFFCFC"
                    android:textSize="24sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvNombreCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="Héctor Rodríguez Fernández"
                android:textAlignment="center"
                android:textColor="#FFE503"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tvCorreoFormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="hectorrdzfdez@gmail.com"
                android:textAlignment="center"
                android:textColor="#FFE503"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_weight="25"
                    app:srcCompat="@android:drawable/ic_delete" />

                <Button
                    android:id="@+id/btVolverAcercaDe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_weight="50"
                    android:backgroundTint="#14FD1E"
                    android:onClick="volverAcercaDe"
                    android:text="@string/bVolver" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_weight="25"
                    app:srcCompat="@android:drawable/ic_delete" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>